<resources>
    <string name="app_name">Persona</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">Home</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_profile">Profile</string>
    <string name="enter_pin">Please Enter Your PIN To Continue</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="error_insert_username">Please Insert Your Username</string>
    <string name="err_pin_required">Please Enter PIN</string>
    <string name="err_pin_exceeded">Maximal PIN Length Is 4</string>
    <string name="err_username_exceeded">Username is too long</string>
    <string name="greeting_enter_PIN">Welcome Back %1$s</string>
    <string name="error_msg_no_biometric_hardware">No Biometric Hardware Detected</string>
    <string name="error_msg_biometric_hw_unavailable">Biometric Hardware Unavailable</string>
    <string name="error_msg_biometric_not_setup">Biometric hasn\'t been initialized</string>
    <string name="auth_title">One Touch Sign-In</string>
    <string name="auth_description">Please place your fingertip on the scanner to verify your identity</string>
    <string name="error_msg_auth_error">Authentication Error %1$s</string>
    <string name="error_msg_auth_failed">Authentication Failed</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="calculate">Calculate</string>
    <string name="your_expense">Your Expense</string>
    <string name="my_saving">My Saving</string>
    <string name="online_subcription">Online Subcription</string>
    <string name="see_all">See All</string>
    <string name="offline_subcription">Offline Subcription</string>
</resources>
