<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >
    <data>
        <variable
                name="viewmodel"
                type="com.zesthra.persona.ui.home.HomeViewModel"
                />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:id="@+id/fab_home"
                android:elevation="5dp"
                android:background="@color/primaryColor"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.954"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.976" />

        <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:id="@+id/home_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/ic_launcher" />

            <TextView
                    android:id="@+id/txt_top_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/home_avatar"
                    android:text="Hello"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            <TextView
                    android:id="@+id/txt_usernamename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/txt_top_profile"
                    android:text="Wow"
                android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
        </RelativeLayout>
        <View
                android:id="@+id/divider_home_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:foregroundGravity="center"
                app:cardBackgroundColor="@color/light_gray"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_home_1">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/txt_date_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="20 Desember 2020"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"/>

                <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                        <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_expenses" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/income" />

                        <TextView
                                android:id="@+id/txt_sum_income"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="www"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                        <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_expenses" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/expense" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Rp 1.000.000" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
                android:id="@+id/divider_home"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />
        <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:foregroundGravity="center"
                app:cardBackgroundColor="@color/light_gray"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_home"
              >

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/your_expense_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/your_expense"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <Button
                        android:layout_toEndOf="@+id/your_expense_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_bg"
                        android:elevation="2dp"
                        android:text="@string/calculate"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:foregroundGravity="center"
                app:cardBackgroundColor="@color/light_gray"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="2"
                        android:text="@string/my_saving"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Rp 5.000.000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:foregroundGravity="center"
                app:cardBackgroundColor="@color/light_gray"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/online_subs_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/online_subcription"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="90dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/online_subs_txt"
                        android:background="@drawable/rounded_bg"
                        android:elevation="2dp"
                        android:text="@string/see_all"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:foregroundGravity="center"
                app:cardBackgroundColor="@color/light_gray"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView4">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/offline_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/offline_subcription"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="90dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/offline_txt"
                        android:background="@drawable/rounded_bg"
                        android:elevation="2dp"
                        android:text="@string/see_all"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>